# Strata

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  adapter_doctor.py  adapter_presets.py  agent_adapters.py  agent_export.py  brief.py  brief_impact.py  cli.py  cli_core.py  cli_help.py  cli_ui.py  command_executor.py  context_budget.py  context_efficiency.py  context_matching.py  context_pack.py  cycles.py  diff_engine.py  direct_edit.py  execution_hints.py  framework_hints.py  fs_utils.py  full_scan.py  gate.py  graph.py  health.py  help_topics.py  http_adapter_contract.py  http_executor.py  impact.py  install-strata.ps1  install.ps1  javascript_project.py  js_parser.py  js_resolution.py  languages.py  (+29 more)
.github/workflows/: publish.yml  tests.yml
commands/: __init__.py  agent_prompt_command.py  apply_command.py  ask_command.py  brief_command.py  config_command.py  context_command.py  cycles_command.py  diff_command.py  doctor_command.py  execute_command.py  gate_command.py  health_command.py  impact_command.py  map_command.py  patch_command.py  preflight_command.py  prepare_command.py  review_command.py  routes_command.py  run_command.py  scan_command.py  setup_command.py  show_command.py  snapshot_command.py  start_command.py  status_command.py  tests_for_command.py  verify_command.py
docs/: releasing.md  runtime-compatibility.md  v6_release_notes.md  v7_roadmap.md
docs/roadmap/: adapter-workflow-control.md  backend-intelligence-foundation.md  candidate-evaluation-quality.md  cost-based-repo-intelligence.md  frontend-deep-linking.md  frontend-intelligence.md  internal-library-resolution.md  performance-scale-hardening.md  priority-dependency-tracing.md  representation-lazy-outline.md  user-flow-journey-intelligence.md  ux-workflow-polish.md  workflow-state-diagnostics.md  workspace-intelligence.md
examples/: fake_ai_patch_writer.py
parsers/: __init__.py  javascript_parser.py  python_parser.py  typescript_parser.py
strata/: __main__.py  cli.py
strata/adapters/: doctor.py  export.py  http_executor.py  ollama.py  presets.py
strata/commands/: agent_prompt_command.py  apply_command.py  ask_command.py  brief_command.py  cli.py  cli_core.py  cli_help.py  cli_ui.py  config_command.py  context_command.py  cycles_command.py  diff_command.py  doctor_command.py  execute_command.py  gate_command.py  health_command.py  help_topics.py  impact_command.py  map_command.py  patch_command.py  preflight_command.py  prepare_command.py  review_command.py  routes_command.py  run_command.py  scan_command.py  settings_command.py  setup_command.py  show_command.py  snapshot_command.py  start_command.py  status_command.py  tests_for_command.py  verify_command.py
strata/core/: angular_component_links.py  angular_route_links.py  angular_starting_files.py  backend_linking_summary.py  backend_relationships.py  brief.py  brief_impact.py  candidate_baseline.py  candidate_evaluation.py  candidate_metrics.py  candidate_pipeline.py  candidates.py  capability_profiles.py  content_probe.py  context_artifacts.py  context_budget.py  context_efficiency.py  context_matching.py  context_pack.py  context_rendering.py  cycles.py  delivery_surfaces.py  dependency_priority.py  dependency_trace_evaluation.py  dependency_trace_runner.py  dependency_tracing.py  dependency_traversal.py  diagnostic_explanations.py  diagnostics.py  diff_engine.py  direct_edit.py  django_routes.py  error_artifacts.py  execution_hints.py  express_routes.py  fastapi_routes.py  flask_routes.py  framework_hints.py  frontend_boundary_signals.py  frontend_frameworks.py  (+50 more)
strata/parsers/: javascript.py  javascript_parser.py  js_resolution.py  languages.py  python.py  python_parser.py  symbol_slicing.py  typescript.py
strata/patch/: ai_response_validation.py  applier.py  validator.py
strata/utils/: artifacts.py  config.py  journey_api_boundary.py  journey_assembly.py  journey_backend.py  journey_context.py  journey_entry_points.py  journey_frontend.py  journey_readiness.py  output.py  paths.py  prompt_safety.py  secrets.py  shell.py  user_journey.py  workspace_config.py  workspace_context.py  workspace_contracts.py  workspace_discovery.py  workspace_graph.py  workspace_readiness.py  workspace_references.py  workspace_relationships.py
tests/: __init__.py  helpers.py  run.py  test_adapter_doctor.py  test_adapter_presets.py  test_agent_adapters.py  test_agent_export.py  test_ai_response_validation.py  test_angular_component_links.py  test_angular_route_links.py  test_angular_starting_files.py  test_apply_command.py  test_architecture_invariants.py  test_artifact_safety.py  test_ask_inline_review.py  test_backend_linking_summary.py  test_backend_map.py  test_backend_relationships.py  test_brief.py  test_brief_impact.py  test_candidate_architecture.py  test_candidate_baseline_report.py  test_candidate_evaluation_contracts.py  test_candidate_evaluation_schema.py  test_candidate_pipeline.py  test_candidate_quality_fixtures.py  test_candidate_quality_metrics.py  test_candidates.py  test_capability_profiles.py  test_cli_core.py  test_command_executor.py  test_config_command.py  test_content_probe.py  test_context_artifacts.py  test_context_budget.py  test_context_command.py  test_context_efficiency.py  test_context_matching.py  test_context_pack.py  test_context_rendering.py  (+133 more)
tests/fixtures/candidate_quality/: README.md
tests/fixtures/candidate_quality/external_style_small/: manifest.json
tests/fixtures/candidate_quality/messy_angular/: manifest.json
tests/fixtures/candidate_quality/messy_python/: manifest.json
tests/fixtures/candidate_quality/messy_react/: manifest.json
tests/fixtures/candidate_quality/strata_smoke/: manifest.json
tests/fixtures/journeys/: scenarios.json
tests/fixtures/workspaces/cyclic_workspace/: README.md
tests/fixtures/workspaces/large_evidence/: README.md
tests/fixtures/workspaces/react_go/backend/: server.go
tmp_repo/: helper.py  main.py
(+38 files in other folders)
