[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-repo-intel"
version = "0.3.1"
description = "Local-first repository intelligence for AI-assisted coding workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vaibhav Malladi" }
]
license = { text = "MIT" }
keywords = [
    "repository-intelligence",
    "ai-coding",
    "cli",
    "static-analysis",
    "developer-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
strata = "cli:main"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = [
    "agent_export",
    "agent_adapters",
    "brief",
    "brief_impact",
    "cli",
    "cli_core",
    "cli_help",
    "cli_ui",
    "adapter_doctor",
    "context_matching",
    "context_pack",
    "cycles",
    "graph",
    "gate",
    "health",
    "impact",
    "patch_contract",
    "patch_applier",
    "patch_validator",
    "command_executor",
    "languages",
    "map_writer",
    "preflight",
    "workflow_planner",
    "workflow_config",
    "ui",
    "diff_engine",
    "verify",
    "snapshot",
    "python_parser",
    "routes",
    "scanner",
    "status",
    "test_mapper"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "parsers*"]
