[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strata-repo-intel"
version = "0.4.1"
description = "Local-first, budget-aware repository context compiler for safer AI-assisted coding."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vaibhav Malladi" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "repository-intelligence",
    "ai-coding",
    "cli",
    "static-analysis",
    "developer-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/Vaibhav-Malladi/Strata"
Repository = "https://github.com/Vaibhav-Malladi/Strata"
Issues = "https://github.com/Vaibhav-Malladi/Strata/issues"
Documentation = "https://github.com/Vaibhav-Malladi/Strata#documentation"
Changelog = "https://github.com/Vaibhav-Malladi/Strata/blob/main/CHANGELOG.md"

[project.scripts]
strata = "strata.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = [
    "agent_export",
    "agent_adapters",
    "adapter_presets",
    "brief",
    "brief_impact",
    "cli",
    "cli_core",
    "cli_help",
    "cli_ui",
    "adapter_doctor",
    "http_adapter_contract",
    "context_matching",
    "context_pack",
    "context_efficiency",
    "cycles",
    "graph",
    "gate",
    "health",
    "impact",
    "patch_contract",
    "patch_applier",
    "patch_validator",
    "command_executor",
    "http_executor",
    "ollama_adapter",
    "context_budget",
    "direct_edit",
    "execution_hints",
    "framework_hints",
    "fs_utils",
    "full_scan",
    "help_topics",
    "javascript_project",
    "js_parser",
    "languages",
    "map_writer",
    "repo_ignore",
    "secret_redaction",
    "selected_context",
    "snapshot_cache",
    "symbol_slicing",
    "test_mapping",
    "typescript_project",
    "verification_hints",
    "preflight",
    "repo_summary",
    "strata",
    "workflow_planner",
    "workflow_config",
    "ui",
    "diff_engine",
    "verify",
    "snapshot",
    "python_parser",
    "js_resolution",
    "routes",
    "scanner",
    "status",
    "test_mapper"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "parsers*", "strata*"]
